--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head> 
-        <title>Bitsy Adaptation</title>
+        <title>Ian Larson CMPM 148</title>
     </head>
     <body>
-        <a href="assignment1/"> enter game</a>
+        <a href="assignment1/"> Dinner in the Forest</a>
     </body>
 </html>
