--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Ian Larson CMPM 148</title>
     </head>
     <body>
-        <a href="assignment1/"> Dinner in the Forest</a>
+        <a href="assignment1/Dinner-in-the-forest.html"> Dinner in the Forest</a>
     </body>
 </html>
