--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -851,7 +851,7 @@ DLG 8
 NAME locked exit to meat
 
 DLG 9
-{wvy}An bloody ribcage lies in the grass.{/wvy}
+{wvy}A bloody ribcage lies in the grass.{/wvy}
 NAME bones dialog
 
 DLG a
