--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -842,7 +842,7 @@ NAME meat dialog
 DLG 8
 """
 {
-  - juice >= cake >= basket >= 1 ?
+  - cake >= 1 >= juice >= 1 ?
     {property locked false}
   - else ?
     {property locked true}You should look elsewhere first before going {shk}deeper{/shk} into the forest.
