--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <a href="assignment1/"> Dinner in the Forest</a>
+        <a href="assignment2/"> Reincarnation</a>
     </body>
 </html>
