--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <a href="assignment1/"> Dinner in the Forest</a>
+    </body>
+    <body>
         <a href="assignment2/"> Reincarnation</a>
     </body>
 </html>
