--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
         <title>Ian Larson CMPM 148</title>
     </head>
     <body>
-        <a href="assignment1/"> Dinner in the Forest</a>
-    </body>
-    <body>
-        <a href="assignment2/"> Reincarnation</a>
+        <a href="assignment1/"> Dinner in the Forest</a><br>
+        <a href="assignment2/Reincarnation.pdf"> Reincarnation</a><a href="assignment2/"></a>
     </body>
 </html>
