--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <a href="assignment1/"> Dinner in the Forest</a><br>
-        <a href="assignment2/Reincarnation.pdf"> Reincarnation</a><a href="assignment2/"> playtests</a>
+        <a href="assignment2/Reincarnation.pdf"> Reincarnation</a> ---<a href="assignment2/playtest.pdf"> playtests</a>
     </body>
 </html>
