set up base html and js for assignment 3

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <a href="assignment1/"> Dinner in the Forest</a><br>
         <a href="assignment2/Reincarnation.pdf"> Reincarnation</a> ---<a href="assignment2/playtest.pdf"> playtests</a>
+        <a href="assignment3/"> Valantis Commission Board</a>
     </body>
 </html>
