--- a/assignment3/index.html
+++ b/assignment3/index.html
@@ -5,6 +5,6 @@
     <a href="sector_map.html"> Valantis Sector Map</a>
     <a href="commission_board.html"> Valantis Commission Board</a>
     <a href="recommended_system.html"> Recommended Systems</a>
-    <a href="source_code.html"> Valantis Commission Center Source Code</a>
+    <a href="source_code.html"> Source Code</a>
 </body>
 </html>
