--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <a href="assignment1/"> Dinner in the Forest</a><br>
-        <a href="assignment2/Reincarnation.pdf"> Reincarnation</a> ---<a href="assignment2/playtest.pdf"> playtests</a>
+        <a href="assignment2/Reincarnation.pdf"> Reincarnation</a> ---<a href="assignment2/playtest.pdf"> playtests</a><br>
         <a href="assignment3/"> Valantis Commission Board</a><br>
     </body>
 </html>
