layout for sector map

--- a/assignment3/sector_map.html
+++ b/assignment3/sector_map.html
@@ -12,11 +12,15 @@
         <a href="sector_map.html"> Valantis Sector Map</a>
         <a href="commission_board.html"> Valantis Commission Board</a>
         <a href="recommended_systems.html"> Recommended Systems</a>
-        <a href="source_code.html"> Source Code</a>
+        <a href="source_code.html"> Source Code</a><br><br>
     
-        <button onclick="build_sectors()"> Scan Sectors </button>
+        <button onclick="build_sectors()"> Build Sectors </button>
 
         <div id="sectors"></div>
+
+        <button onclick="save_sectors()"> Save Sector Data </button>
+
+        <div id="saved_data"></div>
     
     </body>
     </html>
