making the html pretty

--- a/assignment3/commission_board.html
+++ b/assignment3/commission_board.html
@@ -19,7 +19,7 @@
         <div id="commission"></div>
 
         <button onclick="save_commission()"> Save Commission Data </button><br>
-        <button onclick="move_left()"> Left </button><button onclick="move_right()"> Right </button>
+        <button onclick="move_left()"> Left </button> - Saved Commissions - <button onclick="move_right()"> Right </button>
 
         <div id="saved_data"></div>
     
