--- a/assignment3/commission_board.html
+++ b/assignment3/commission_board.html
@@ -6,14 +6,21 @@
     <script src="input_output.js"></script>
     <script src="grammar.js"></script>
     <script src="commission_board.js"></script>
+    <script>
+        let screen_width = screen.width / 2;
+    </script>
 
-    </head>
     <body>
         <a href="sector_map.html"> Valantis Sector Map</a>
         <a href="commission_board.html"> Valantis Commission Board</a>
         <a href="recommended_systems.html"> Recommended Systems</a>
         <a href="source_code.html"> Source Code</a><br><br>
     
+        <div class="left" style="display: inline-block; float: left; width: 50%; height: 100%;">
+        <b>Commission Area</b><textarea style= "width: 100%; height: 500px"></textarea>
+        </div>
+        
+        <div class="right" style="display: inline-block; float: left; width: 50%; background:rgb(24, 236, 219);">
         <button onclick="build_commission()"> Find Commission </button>
 
         <div id="commission"></div>
