--- a/assignment3/commission_board.html
+++ b/assignment3/commission_board.html
@@ -6,9 +6,6 @@
     <script src="input_output.js"></script>
     <script src="grammar.js"></script>
     <script src="commission_board.js"></script>
-    <script>
-        let screen_width = screen.width / 2;
-    </script>
 
     <body>
         <a href="sector_map.html"> Valantis Sector Map</a>
@@ -16,11 +13,11 @@
         <a href="recommended_systems.html"> Recommended Systems</a>
         <a href="source_code.html"> Source Code</a><br><br>
     
-        <div class="left" style="display: inline-block; float: left; width: 50%; height: 100%;">
+        <div class="left" style="float: left; width: 50%; height: 100%;">
         <b>Commission Area</b><textarea style= "width: 100%; height: 500px"></textarea>
         </div>
         
-        <div class="right" style="display: inline-block; float: left; width: 50%; background:rgb(24, 236, 219);">
+        <div class="right" style="float: left; width: 50%; background:rgb(24, 236, 219);">
         <button onclick="build_commission()"> Find Commission </button>
 
         <div id="commission"></div>
