changed link locations

--- a/assignment3/recommended_systems.html
+++ b/assignment3/recommended_systems.html
@@ -4,7 +4,7 @@
     <body>
         <a href="sector_map.html"> Valantis Sector Map</a>
         <a href="commission_board.html"> Valantis Commission Board</a>
-        <a href="recommended_systems.html"> Recommended Systems</a>
-        <a href="source_code.html"> Source Code</a>
+        <a href="recommended_systems.html"> Recommended Systems</a><br>
+        <a href="https://github.com/CursedFaey/CMPM-148-Projects/tree/main/assignment3"> Source Code (Github)</a>
     </body>
     </html>
