--- a/assignment3/commission_board.html
+++ b/assignment3/commission_board.html
@@ -10,8 +10,8 @@
     <body>
         <a href="sector_map.html"> Valantis Sector Map</a>
         <a href="commission_board.html"> Valantis Commission Board</a>
-        <a href="recommended_systems.html"> Recommended Systems</a>
-        <a href="source_code.html"> Source Code</a><br><br>
+        <a href="recommended_systems.html"> Recommended Systems</a><br>
+        <a href="https://github.com/CursedFaey/CMPM-148-Projects/blob/main/assignment3/commission_board.js"> Source Code for Commission Board</a><br><br>
     
         <div class="left" style="float: left; width: 50%; height: 100%;">
         <b>Commission Area</b><textarea style= "width: 100%; height: 500px"></textarea>
