--- a/assignment3/sector_map.html
+++ b/assignment3/sector_map.html
@@ -11,8 +11,8 @@
     <body>
         <a href="sector_map.html"> Valantis Sector Map</a>
         <a href="commission_board.html"> Valantis Commission Board</a>
-        <a href="recommended_systems.html"> Recommended Systems</a>
-        <a href="source_code.html"> Source Code</a><br><br>
+        <a href="recommended_systems.html"> Recommended Systems</a><br>
+        <a href="https://github.com/CursedFaey/CMPM-148-Projects/blob/main/assignment3/sector_map.js"> Source Code for Sector Map</a><br><br>
     
         <button onclick="build_sectors()"> Build Sectors </button>
 
