--- a/assignment3/commission_board.html
+++ b/assignment3/commission_board.html
@@ -14,7 +14,7 @@
         <a href="https://github.com/CursedFaey/CMPM-148-Projects/blob/main/assignment3/commission_board.js"> Source Code for Commission Board</a><br><br>
     
         <div class="left" style="float: left; width: 50%; height: 100%;">
-        <b>Commission Area</b><textarea style= "width: 100%; height: 500px"></textarea>
+        <b>Commission Area </b><i>(You can copy paste the sectors here)</i><textarea style= "width: 100%; height: 500px"></textarea>
         </div>
         
         <div class="right" style="float: left; width: 50%; background:rgb(24, 236, 219);">
