scope cut plus add rewards/leads/pronouns

--- a/assignment3/recommended_systems.html
+++ b/assignment3/recommended_systems.html
@@ -5,6 +5,9 @@
         <a href="sector_map.html"> Valantis Sector Map</a>
         <a href="commission_board.html"> Valantis Commission Board</a>
         <a href="recommended_systems.html"> Recommended Systems</a><br>
-        <a href="https://github.com/CursedFaey/CMPM-148-Projects/tree/main/assignment3"> Source Code (Github)</a>
+        <a href="https://github.com/CursedFaey/CMPM-148-Projects/tree/main/assignment3"> Source Code (Github)</a><br><br>
+        
+        This can be used with an assortment of TTRPGs. It's main purpose is to procedually generate "cities" and commissions to give DM's and players something to play with. This specific version with flavored text is based on my own world building for a <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwihuO6roJr_AhVyOUQIHeG-AcQQFnoECBQQAQ&url=https%3A%2F%2Fdnd.wizards.com%2F&usg=AOvVaw3WndWApcR1Wqa2NqQ-5rYd">Dungeons and Dragons 5e</a> campaign which is set in a more modern world where the 4 elemental planes have converged into the material plane, so there is a lot of elemental influences. But this can be changed to include other influences in the source code.
+
     </body>
     </html>
