draft of Arcane Sparks

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <a href="assignment1/"> Dinner in the Forest</a><br>
         <a href="assignment2/Reincarnation.pdf"> Reincarnation</a> ---<a href="assignment2/playtest.pdf"> playtests</a><br>
         <a href="assignment3/"> Valantis Commission Board</a><br>
+        <a href="assignment5/">Arcane Sparks</a><br>
         <a href="assignment7/">Limbo INC.</a><br>
         <a href="assignment9/Fertilizer.pdf"> Fertilizer Storytelling Doc</a>
     </body>
